# my_bot

./: FLASHING_GUIDE.md  ROS2_CONTROL_GUIDE.md  debug_firmware.py  debug_test.sh  test_full_integration.py
config/: my_controllers.yaml  rplidar.rviz  view_bot.rviz
description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
install/: local_setup.sh  setup.sh
install/new_bot/include/new_bot/: rp2040_hardware_interface.hpp
install/new_bot/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: new_bot
install/new_bot/share/ament_index/resource_index/package_run_dependencies/: new_bot
install/new_bot/share/ament_index/resource_index/parent_prefix_path/: new_bot
install/new_bot/share/new_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  new_bot_hardware_interface.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/new_bot/share/new_bot/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  new_botConfig-version.cmake  new_botConfig.cmake  new_bot_hardware_interfaceExport.cmake
install/new_bot/share/new_bot/config/: controllers.yaml  robot_view.rviz
install/new_bot/share/new_bot/description/: inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
install/new_bot/share/new_bot/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/new_bot/share/new_bot/launch/: hardware.launch.py  minimal_hardware_test.launch.py  robot_state_publisher.launch.py
install/new_bot/share/new_bot/scripts/: README_RP2040.md  debug_ping_test.py  diagnose_rp2040.sh  improved_test_rp2040.py  rp2040_firmware.cpp  rp2040_simulator.py  setup.sh  setup_rp2040.sh  simple_rp2040_test.py  test_rp2040.py  test_simulator.py
install/new_bot/share/new_bot/scripts/rp2040_firmware/: README.md  README_CLEAN.md  debug_main.py  fixed_main.py  main.py  serial_main.py  simple_main.py  simple_test.py
launch/: commands.md  commands.txt  launch_robot.launch.py  launch_sim.launch.py  rplidar.launch.py
log/: latest_build
src/new_bot/: CMakeLists.txt  README.md  new_bot_hardware_interface.xml  package.xml
src/new_bot/config/: controllers.yaml  robot_view.rviz
src/new_bot/description/: inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/new_bot/include/new_bot/: rp2040_hardware_interface.hpp
src/new_bot/launch/: hardware.launch.py  minimal_hardware_test.launch.py  robot_state_publisher.launch.py
src/new_bot/scripts/: README_RP2040.md  debug_ping_test.py  diagnose_rp2040.sh  improved_test_rp2040.py  rp2040_firmware.cpp  rp2040_simulator.py  setup.sh  setup_rp2040.sh  simple_rp2040_test.py  test_rp2040.py  test_simulator.py
src/new_bot/scripts/rp2040_firmware/: README.md  debug_main.py  fixed_main.py  main.py  serial_main.py  simple_test.py
src/new_bot/src/: rp2040_hardware_interface.cpp
