<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>new_bot</name>
  <version>1.0.0</version>
  <description>Ackermann steering robot with RP2040 hardware interface for RPi5</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Hardware Interface Dependencies -->
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <!-- Controller Dependencies -->
  <depend>ackermann_steering_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>imu_sensor_broadcaster</depend>
  <depend>range_sensor_broadcaster</depend>

  <!-- Robot Description -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>

  <!-- Sensor Dependencies -->
  <depend>rplidar_ros</depend>
  <depend>camera_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- TF and Navigation -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
